On navbar collapse, fix navbar display to be flex direction: row.

--- a/client/src/components/NavigationBar.css
+++ b/client/src/components/NavigationBar.css
@@ -1,7 +1,34 @@
+nav {
+  display: flex;
+  flex-direction: column;
+}
+
+.user-logs {
+  background-color: #7A9392;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.nav-user-link {
+  color: white;
+  border: 1px solid white;
+  padding: 0.40rem 0.5rem;
+  margin-right: 0.75rem;
+}
+.nav-user-link:hover {
+  color: black;
+  background-color: white;
+  text-decoration: none;
+}
+
 .navbar {
   background-color: #EDE9E3;
   box-shadow: 0 8px 6px -6px #999;
   width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 a, .navbar-nav, .navbar-light {
@@ -30,29 +57,4 @@ margin-left:40px;
 
 .nav-item {
   padding-left: 30px;
-}
-
-nav {
-  display: flex;
-  flex-direction: column;
-}
-
-.user-logs {
-  background-color: #7A9392;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.nav-user-link {
-  color: white;
-  border: 1px solid white;
-  padding: 0.40rem 0.5rem;
-  margin-right: 0.75rem;
-}
-.nav-user-link:hover {
-  color: black;
-  background-color: white;
-  text-decoration: none;
 }
